<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#090909"
    android:backgroundTint="#000000"
    android:longClickable="false"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/email_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/email_txt"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="289dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/museosans_300"
        android:inputType="textWebEmailAddress|textPersonName"
        android:textColor="#171616"
        app:layout_constraintEnd_toEndOf="@+id/email_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_txt"
        app:layout_constraintTop_toBottomOf="@+id/email_txt" />

    <TextView
        android:id="@+id/create_pass_txt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museosans_300"
        android:text="@string/create_pass_txt"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/pass_input_1"
        android:layout_width="289dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/museosans_300"
        android:hint="See criteria below"
        android:inputType="textPassword"
        android:textColor="#171616"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/create_pass_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/create_pass_txt"
        app:layout_constraintTop_toBottomOf="@+id/create_pass_txt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/repeat_pass_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/repeat_pass_txt"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_input_1"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/pass_input_2"
        android:layout_width="289dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/museosans_300"
        android:inputType="textPassword"
        android:textColor="#171616"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/repeat_pass_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/repeat_pass_txt"
        app:layout_constraintTop_toBottomOf="@+id/repeat_pass_txt"
        app:layout_constraintVertical_bias="0.011" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="360dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museosans_500"
        android:linksClickable="false"
        android:text="@string/btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/pass_msg"
        android:layout_width="355dp"
        android:layout_height="95dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/pass_msg"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="@+id/btn_next"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/btn_next"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

    <TextView
        android:id="@+id/val_msg"
        android:layout_width="367dp"
        android:layout_height="69dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/val_msg"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/pass_msg"
        app:layout_constraintEnd_toEndOf="@id/pass_input_2"
        app:layout_constraintStart_toStartOf="@id/pass_input_2"
        app:layout_constraintTop_toBottomOf="@+id/pass_input_2"
        app:layout_constraintVertical_bias="0.154" />

</androidx.constraintlayout.widget.ConstraintLayout>