<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-54dp"
    tools:layout_editor_absoluteY="-6dp">

    <ImageView
        android:id="@+id/benefit_img_1"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:cropToPadding="true"
        app:layout_constraintEnd_toEndOf="@id/create_acc_msg"
        app:layout_constraintTop_toBottomOf="@+id/create_acc_msg"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/benefit_img_3"
        android:layout_width="22dp"
        android:layout_height="22dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_creat_acc"
        app:layout_constraintEnd_toEndOf="@+id/benefit_img_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/benefit_img_2"
        app:layout_constraintTop_toBottomOf="@+id/benefit_img_2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/benefit_img_2"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/benefit_img_1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/benefit_img_1"
        app:layout_constraintTop_toBottomOf="@+id/benefit_img_1"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="318dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green_flag" />

    <TextView
        android:id="@+id/create_acc_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/museosans_500"
        android:text="@string/create_acc_msg"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/benefit_msg_2"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/benefit_msg_2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/benefit_img_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/create_acc_msg"
        app:layout_constraintTop_toBottomOf="@+id/benefit_msg_1" />

    <TextView
        android:id="@+id/benefit_msg_1"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/benefit_msg_1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/benefit_img_1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/create_acc_msg"
        app:layout_constraintTop_toBottomOf="@+id/create_acc_msg" />

    <TextView
        android:id="@+id/benefit_msg_3"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/museosans_300"
        android:paddingBottom="4dp"
        android:text="@string/benefit_msg_3"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_creat_acc"
        app:layout_constraintEnd_toStartOf="@+id/benefit_img_3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/create_acc_msg"
        app:layout_constraintTop_toBottomOf="@id/benefit_msg_2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_creat_acc"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museosans_300"
        android:text="@string/btn_creat_acc"
        android:onClick="launchSecondActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>